# lattice_evolution

./: .gitignore  1paramBayesian.ipynb  Bayesian 2param.ipynb  Cargo.toml  JSD Plots.ipynb  MomProb.txt  README.md  importtest.ipynb  test.txt
.obsidian/: app.json  workspace.json
1param_acc_fig2/: MomProb.txt  main.rs
2param_lattice/: test.txt
MP_acc_multiparamBayesianpriors/: 500.txt
Obsidian Notes/: CFI notes and quick numerical values for reference.md  DAMOP abstracts draft.md  Edits to paper.md  Future Implementation and Possible Issues.md
Option1_Rust/: MomProb.txt  main.rs
Option2_Rust/: MomProb.txt  test.txt
Option2_Rust_Run2/: main.rs  test.txt
Python/: 1paramBayesian.ipynb  CFI_plots.ipynb  Divergences.py  Experimental_comparison.ipynb  JSD Plots.ipynb  Jitter.ipynb  Option1_2_comparison.ipynb  Paper_Plots.ipynb  Plots QOC.ipynb  Sequence2param.py  Sequence2param_v2.py  Units.py  importtest.ipynb  p2x_fft.py  plotCFInJSD.py  plotJSD_acc.py  plotJSD_expansion.py  plotJSD_lattice.py  plotfringes.py  realistic.ipynb  test.ipynb  test_cfi.py  testing_fft.ipynb
Recom0/: cfi_qfi_longer_withprop.txt  combined_shaking.txt  main_generate_and_CFI.rs  test_longer_withprop.txt
SP_Bayesianpriors_FinerRun/: AVIndex.npy  main.rs
SP_acc_multiparamBayesianpriors/: LatticeDepth.txt
doc/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
dynamic_range/: test.txt
plot_finer/: main.rs
src/: jittery_lattice.rs  lattice.rs  lattice_QOC.rs  lattice_realistic.rs  main.rs  main_for_generate.rs  main_plot.rs  main_test_cfi.rs  (+8 more)
(+145 files in other folders)
