[package]
name = "lattice_evolution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
num-complex = "0.4.4"
nalgebra = "0.32.3"
# rayon = "1.8.0"
# indicatif = {version = "*", features = ["rayon"]}
rand_distr = "0.4.3"
rand = "0.8.5"
# plotly = "0.8.4"
# ndarray-csv = "0.5.2"
# csv = "1.1"
# ndarray-npy = "0.8.1"
random_choice = "0.3.2"
itertools = "0.8"
# rustfft = "6.2.0"

